--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@
 /* chandra css end */
 
 /* prem css start */
-.Animals_first {
+/* .Animals_first {
   width: 100%;
   height: 100vh;
   background-color: #f0ebe0;
@@ -396,12 +396,401 @@
     object-fit: contain;
     padding: 0px 0px 0px 0px;
   }
+} */
+.Animals_first {
+  width: 100%;
+  height: 100vh;
+  background-color: #f0ebe0;
 }
 
+.Animals_text {
+  font-size: 50px;
+  font-weight: bold;
+  padding-top: 15rem;
+  font-family: "Playfair Display", serif;
+}
+
+.text_under {
+  color: red;
+}
+.line_one {
+  width: 100%;
+  border: 3px solid #227aaf;
+  margin-top: 3rem;
+}
+.line_second {
+  width: 100%;
+  border: 1px solid #227aaf;
+  margin-top: 15rem;
+}
+
+.Animals_second {
+  width: 100%;
+  height: 100vh;
+  background-color: #f0ebe0;
+}
+
+.hh {
+  height: 100%;
+}
+
+.imgsecond {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: right;
+}
+
+.animals_second_type {
+  padding-top: 10rem;
+  padding-left: 1rem;
+}
+
+.Animals_secondText {
+  font-size: 70px;
+  font-weight: bold;
+  border-top: 3px solid blue;
+  border-bottom: 1px solid blue;
+  font-family: "Playfair Display", serif;
+}
+
+.firstbox_li {
+  font-size: 35px;
+  font-weight: 400;
+  color: gray;
+  font-family: "Playfair Display", serif;
+}
+
+.Animals_Third {
+  height: 100vh;
+  background-color: #f0ebe0;
+}
+
+.hr-line {
+  border-top: 3px solid blue;
+  width: 100%;
+  margin-top: 40px;
+}
+
+.animals_style {
+  font-size: 45px;
+  text-align: center;
+  font-weight: 800;
+  padding: 30px;
+  font-family: "Playfair Display", serif;
+}
+
+.animals_style_second {
+  font-size: 35px;
+  text-align: center;
+  font-weight: 500;
+  color: #367092;
+  font-family: "Playfair Display", serif;
+}
+
+.animals_style_third {
+  font-size: 28px;
+  text-align: center;
+  font-weight: 600;
+  font-family: "Playfair Display", serif;
+}
+
+.inner_text {
+  color: brown;
+}
+
+.hr-line_second {
+  border-top: 1px solid blue;
+  width: 100%;
+}
+
+.Animals_fourth {
+  height: 100vh;
+  background-color: #227aaf;
+}
+
+.hr-line_third {
+  border: 3px solid white;
+  width: 100%;
+  opacity: 1;
+  margin-top: 3rem;
+}
+
+.animals_style_second_one {
+  font-size: 42px;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  padding-top: 5rem;
+}
+
+.animals_style_second_two {
+  font-size: 40px;
+  text-align: center;
+  font-weight: 500;
+  color: white;
+  padding-top: 70px;
+}
+
+.hr-line_second_third {
+  border-top: 2px solid white;
+  width: 100%;
+  margin-top: 5rem !important;
+}
+
+.Animals_five {
+  height: 100vh;
+  background-color: #f0ebe0;
+}
+
+.fourth_img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  object-position: right;
+}
+
+.five_animals {
+  margin-top: 3rem;
+  border-top: 3px solid blue;
+  padding: 80px;
+}
+
+.animal_five_para_one {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: "Playfair Display", serif;
+  padding: 50px 0px 0px 0px;
+}
+
+.animal_five_para_two {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: "Playfair Display", serif;
+  padding: 40px 0px 0px 0px;
+}
+
+.hr-line_five {
+  width: 100%;
+  border-top: 3px solid blue;
+}
+
+.Animals_six {
+  height: 100vh;
+  background-color: #227aaf;
+}
+
+.text_style {
+  font-size: 55px;
+  font-weight: bold;
+  font-family: "Playfair Display", serif;
+}
+
+.graph_img {
+  width: 90%;
+  height: 75%;
+  object-fit: contain;
+  padding: 10px 0px 0px 100px;
+}
+.text_below_graph {
+  font-size: 24px;
+  color: white;
+  margin-left: 100px;
+}
+@media screen and (min-width: 1025px) and (max-width: 1550px) {
+  .Animals_first {
+    width: 100%;
+    height: auto;
+  }
+
+  .Animals_text {
+    font-size: 48px;
+    font-weight: bold;
+    padding-top: 245px;
+    padding-left: 50px;
+  }
+  .img_first {
+    width: 100%;
+  }
+  .img_first {
+    width: 100%;
+  }
+  .line_second {
+    width: 100%;
+    border: 1px solid #227aaf;
+    margin-top: 0rem;
+    display: none;
+  }
+
+  .Animals_second {
+    height: 100%;
+    width: 100%;
+    background-color: #f0ebe0;
+  }
+  .imgsecond {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: right;
+  }
+  .Animals_Third {
+    height: 100%;
+    width: 100%;
+    background-color: #f0ebe0;
+  }
+  .Animals_fourth {
+    height: 100%;
+    width: 100%;
+  }
+  .fourth_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: right;
+  }
+  .Animals_five {
+    height: 100%;
+    width: 100%;
+  }
+  .Animals_six {
+    height: 100%;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .Animals_first {
+    width: 100%;
+    height: auto;
+  }
+
+  .Animals_text {
+    font-size: 35px;
+    font-weight: bold;
+    padding-top: 150px;
+  }
+  .img_first {
+    width: 100%;
+  }
+  .img_first {
+    width: 100%;
+  }
+  .line_second {
+    width: 100%;
+    border: 1px solid #227aaf;
+    margin-top: 0rem;
+    display: none;
+  }
+
+  .Animals_second {
+    height: auto;
+  }
+
+  .Animals_secondText {
+    font-size: 35px;
+    font-weight: bold;
+    border-top: 3px solid blue;
+    border-bottom: 1px solid blue;
+    font-family: "Playfair Display", serif;
+  }
+  .firstbox_li {
+    font-size: 20px;
+    font-weight: 400;
+    color: gray;
+    font-family: "Playfair Display", serif;
+  }
+  .animals_style {
+    font-size: 20px;
+    text-align: center;
+    font-weight: 800;
+    padding: 30px;
+    font-family: "Playfair Display", serif;
+  }
+
+  .animals_style_second {
+    font-size: 20px;
+    text-align: center;
+    font-weight: 500;
+    color: #367092;
+    font-family: "Playfair Display", serif;
+  }
+
+  .animals_style_third {
+    font-size: 20px;
+    text-align: center;
+    font-weight: 600;
+    font-family: "Playfair Display", serif;
+  }
+
+  .Animals_Third {
+    height: auto;
+  }
+  .animals_style_second_one {
+    font-size: 30px;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+  }
+
+  .animals_style_second_two {
+    font-size: 30px;
+    text-align: center;
+    font-weight: 500;
+    color: white;
+    padding-top: 70px;
+  }
+  .para_style {
+    padding-top: 1rem;
+  }
+
+  .Animals_fourth {
+    height: auto;
+  }
+
+  .five_animals {
+    margin-top: 3rem;
+    border-top: 3px solid blue;
+    padding: 0px;
+  }
+
+  .animal_five_para_one {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
+    padding: 50px 0px 0px 0px;
+  }
+
+  .animal_five_para_two {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
+    padding: 40px 0px 0px 0px;
+  }
+  .Animals_five {
+    height: auto;
+  }
+  .Animals_six {
+    height: auto;
+  }
+  .text_style {
+    font-size: 20px;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
+  }
+  .text_below_graph {
+    font-size: 14px;
+    color: white;
+  }
+  .graph_img {
+    width: 90%;
+    height: 75%;
+    object-fit: contain;
+    padding: 0px 0px 0px 0px;
+  }
+}
 /* prem css end */
 
 /* imam css start */
-.graph-container {
+/* .graph-container {
   height: 100vh;
 }
 
@@ -457,9 +846,7 @@
   width: 100%;
 }
 
-#newDiv {
-  /* background-color: aqua; */
-}
+
 
 .new-ploat-text-container {
   width: 80%;
@@ -482,6 +869,46 @@
 
 .interactive-span-text {
   color: brown;
+} */
+
+.newPlot-text {
+  margin-top: 12px;
+}
+@media screen and (max-width: 768px) {
+  .newPlot-text {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .inner-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+}
+
+.main-container {
+  background-color: #f0ebe0;
+  border-radius: 6px;
+}
+.list-item-container {
+  font-size: 25px;
+  font-family: "sans-serif";
+  letter-spacing: 1px;
+  word-spacing: 0px;
+  color: rgb(89, 88, 88);
+  font-weight: 500;
+  line-height: 1;
+  font-weight: 500;
+}
+.australian-species {
+  font-weight: bold;
+  color: rgb(89, 88, 88);
+}
+.newDiv-wrapper-container {
+  background-color: #f0ebe0;
+  border-radius: 6px;
 }
 
 /* imam css end */
