--- a/index.css
+++ b/index.css
@@ -317,7 +317,7 @@
   color: #c8c169;
   margin-top: 20px !important;
 
-  margin-left: 100px;
+  /* padding-left: 100px; */
   /* margin-left: 100px; */
 }
 @media screen and (min-width: 1025px) and (max-width: 1550px) {
@@ -481,7 +481,7 @@
 
   .five_animals {
     margin-top: 3rem;
-    border-top: 3px solid blue;
+    /* border-top: 3px solid blue; */
     padding: 0px;
   }
 
